<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="#000000">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/tochange"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/email"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFF"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/confirm_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/Confirm_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        tools:ignore="VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/confrim_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        tools:ignore="VisualLintTextFieldSize" />
    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/back_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_to_login"
        android:layout_marginTop="10dp"
        android:backgroundTint="#000000"
        android:textColorHint="#FFFFFF"
        tools:ignore="VisualLintButtonSize" />







</LinearLayout>
